# routes/products.js
@@ -1,4 +1,5 @@
 const router = require('express').Router();
+const { requiresAuth } = require('express-openid-connect');
 const productsController = require('../controllers/productsController');
 const {
   productValidation,
@@ -7,14 +8,15 @@ const {
 } = require('../utils/productsValidation');
 
 // Route to get all products
-router.get('/', productsController.getProducts);
+router.get('/', requiresAuth(), productsController.getProducts);
 
 // Route to get a product by ID
-router.get('/:productId', productsController.getProductById);
+router.get('/:productId', requiresAuth(), productsController.getProductById);
 
 // Route to add a new product
 router.post(
   '/',
+  requiresAuth(),
   productValidation,
   validateResults(),
   productsController.addProduct,
@@ -23,12 +25,17 @@ router.post(
 // Route to update a product by ID
 router.put(
   '/:productId',
+  requiresAuth(),
   updateProductValidation,
   validateResults(),
   productsController.updateProductById,
 );
 
 // Route to delete a product by ID
-router.delete('/:productId', productsController.deleteProductById);
+router.delete(
+  '/:productId',
+  requiresAuth(),
+  productsController.deleteProductById,
+);
 
 module.exports = router;
