# routes/swagger.js
@@ -1,8 +1,29 @@
 const router = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
+const { requiresAuth } = require('express-openid-connect');
 const swaggerDocument = require('../swagger.json');
 
-router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
+// Custom Swagger UI options to include OAuth
+const swaggerOptions = {
+  swaggerOptions: {
+    oauth2RedirectUrl: 'http://localhost:3000/api-docs/oauth2-redirect.html',
+    initOAuth: {
+      clientId: process.env.CLIENT_ID,
+      clientSecret: process.env.SECRET,
+      appName: 'My App',
+      scopeSeparator: ' ',
+      scopes: ['openid', 'profile'],
+      useBasicAuthenticationWithAccessCodeGrant: false,
+      usePkceWithAuthorizationCodeGrant: true,
+    },
+  },
+};
+
+// Protect the API documentation route
+router.use(
+  '/api-docs',
+  swaggerUi.serve,
+  swaggerUi.setup(swaggerDocument, swaggerOptions),
+);
 
 module.exports = router;
